[package]
name = "rs-futures-example"
version = "0.1.0"
authors = ["guangsheng.li01 <guangsheng.li01@liulishuo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", features = ["thread-pool"] }
